--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ Slats bellow screened porch will be same color.</p>
 <br>
 <center>
 <p>Want to make changes to this proposal?</p>
-<a href="#" class="button">Contact us</a></center>
+<a href="https://dymondsystems.com/#contact" class="button">Contact us</a></center>
 
 <p style="text-align:right;"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAeElEQVQ4y2NgGAXEAM2GnQ7UMkgAiPuB+D9VXAXE90GGUWwg0IAGmEEUGQjUaADE59ENI8tAoKYCbAaRbCBQsQIQ78dnGKkGFhAyjGQvo8cotcIQnuaoYiCSwQFA/J5qBiK5dj3VDEQyOAHmWmoWDKBktX60iIQDAHPBs+BkgOH/AAAAAElFTkSuQmCC" style="vertical-align:middle;"/> <a href="/pagespeed/"><small>back to dymondsystems.com</small></a></p>
 <hr>
